# noneqmutsel

./: CMakeLists.txt  README.md  buildnemss_config.h  nemss_config.h.in
data/rootfreqs/: rootfreqs_20tip_birth01_bal_300sites.trees  rootfreqs_20tip_birth01_bal_300sites_0.fasta  rootfreqs_20tip_birth01_bal_300sites_1.fasta  rootfreqs_20tip_birth01_bal_300sites_2.fasta  rootfreqs_20tip_birth01_bal_300sites_3.fasta  rootfreqs_20tip_birth01_bal_300sites_4.fasta  rootfreqs_20tip_birth01_bal_300sites_5.fasta  rootfreqs_20tip_birth01_bal_300sites_6.fasta  rootfreqs_20tip_birth01_bal_300sites_7.fasta  rootfreqs_20tip_birth01_bal_300sites_8.fasta  rootfreqs_20tip_birth01_bal_300sites_9.fasta  rootfreqs_20tip_birth01_bal_300sites_labelled.trees  rootfreqs_20tip_birth01_bdp_300sites.trees  rootfreqs_20tip_birth01_bdp_300sites_0.fasta  rootfreqs_20tip_birth01_bdp_300sites_1.fasta  rootfreqs_20tip_birth01_bdp_300sites_2.fasta  rootfreqs_20tip_birth01_bdp_300sites_3.fasta  rootfreqs_20tip_birth01_bdp_300sites_4.fasta  rootfreqs_20tip_birth01_bdp_300sites_5.fasta  rootfreqs_20tip_birth01_bdp_300sites_6.fasta  rootfreqs_20tip_birth01_bdp_300sites_7.fasta  rootfreqs_20tip_birth01_bdp_300sites_8.fasta  rootfreqs_20tip_birth01_bdp_300sites_9.fasta  rootfreqs_20tip_birth01_bdp_300sites_labelled.trees  rootfreqs_20tip_birth01_imb_300sites.trees  rootfreqs_20tip_birth01_imb_300sites_0.fasta  rootfreqs_20tip_birth01_imb_300sites_1.fasta  rootfreqs_20tip_birth01_imb_300sites_2.fasta  rootfreqs_20tip_birth01_imb_300sites_3.fasta  rootfreqs_20tip_birth01_imb_300sites_4.fasta  rootfreqs_20tip_birth01_imb_300sites_5.fasta  rootfreqs_20tip_birth01_imb_300sites_6.fasta  rootfreqs_20tip_birth01_imb_300sites_7.fasta  rootfreqs_20tip_birth01_imb_300sites_8.fasta  rootfreqs_20tip_birth01_imb_300sites_9.fasta  rootfreqs_20tip_birth01_imb_300sites_labelled.trees  (+96 more)
python/: KimuraMutSelMatrix.py  pyvolve_sim_seqs.py
src/: AdditionalOptimizationTools.cpp  AdditionalOptimizationTools.h  BranchMixtureMutSelInference.cpp  BranchMixtureMutSelInference.h  CMakeLists.txt  MutationSelectionModel.cpp  MutationSelectionModel.h  NonHomogeneousSiteProfileMixture.cpp  NonHomogeneousSiteProfileMixture.h  RNonHomogeneousMultiProfileTreeLikelihood.cpp  RNonHomogeneousMultiProfileTreeLikelihood.h  main.cpp
(+384 files in other folders)
